# py-template

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.github_project}}/: Makefile  README.md  env.template  pyproject.toml
{{cookiecutter.github_project}}/src/{{cookiecutter.py_package}}/: settings.py
{{cookiecutter.github_project}}/src/{{cookiecutter.py_package}}/cli/: serve.py  show_settings.py
{{cookiecutter.github_project}}/tests/: test_main.py  test_settings.py
{{cookiecutter.github_project}}/tests/cli/: test_serve.py  test_show_settings.py
