[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.github_project}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "click",
]

[dependency-groups]
dev = [
    "anyio",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.urls]
bugs = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_project}}"

[project.scripts]
show-settings = "{{cookiecutter.py_package}}.cli.show_settings:main"
serve = "{{cookiecutter.py_package}}.cli.serve:main"

# Configure hatchling to find packages in src/
[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.py_package}}"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

# Tool configurations
[tool.ruff]
src = ["src", "tests"]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "W", "B", "I", "N", "UP", "C4",
    "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET",
    "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA",
    "PGH", "PL", "TRY", "NPY", "RUF",
]
ignore = [
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "N999", # Hyphen in GitHub repo name
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["{{cookiecutter.py_package}}"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["RUF001"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
